# aws-devpost

./: .env.example  .gitignore  AUTHENTICATION_DOCUMENTATION.md  AUTHENTICATION_SETUP.md  AUTH_QUICK_REFERENCE.md  CONCISE_ANALYSIS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.md  aws-oct.pem  main.py  process.md  pyproject.toml  requirements.txt  test_auth_apis.py  test_concise_analysis.py  test_service.py  test_upload.html
src/agents/: dynamodb_agent.py  excel_agent.py  image_agent.py  storage_agent.py
src/api/: auth_models.py  models.py  routes.py  routes_old.py
src/services/: auth_service.py  aws_service.py
src/utils/: exceptions.py  logger.py
