[project]
name = "aws-october"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.40.51",
    "fastapi>=0.119.0",
    "google-genai>=1.43.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "passlib[bcrypt]==1.7.4",
    "pillow>=11.3.0",
    "pydantic[email]>=2.12.1",
    "pyjwt==2.8.0",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]
